--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "@fontsource/material-icons-outlined": "^5.0.11",
     "@vercel/blob": "^0.22.0",
+    "@vercel/postgres": "^0.7.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
