--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "@fontsource/material-icons-outlined": "^5.0.11",
     "@vercel/blob": "^0.22.0",
     "@vercel/postgres": "^0.7.2",
+    "bcrypt": "^5.1.1",
+    "jose": "^5.2.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "react-hook-form": "^7.50.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
