--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "@vercel/postgres": "^0.7.2",
     "bcrypt": "^5.1.1",
     "jose": "^5.2.2",
-    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
-    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
@@ -29,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
